--- a/package.json
+++ b/package.json
@@ -1,17 +1,39 @@
 {
-  "name": "@suwell/ofd",
-  "version": "1.0.0",
+  "name": "@qdjavascript/ofd",
+  "version": "1.0.2",
   "description": "ofd reader",
-  "main": "index.ts",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "npm run build:js",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
   },
   "keywords": [
     "typescript"
   ],
+  "homepage": "https://github.com/qdjavascript/ofd",
   "author": "qdjavascript@gmail.com",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.22.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.22.4",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-typescript": "^7.21.5",
     "typescript": "^5.0.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/qdjavascript/ofd.git"
+  },
+  "bugs": {
+    "url": "https://github.com/qdjavascript/ofd/issues"
+  },
+  "typings": "./typings/index.d.ts"
 }
