--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@qdjavascript/ofd",
-  "version": "1.0.2",
-  "description": "ofd reader",
+  "name": "@qdjavascript/designer",
+  "version": "1.0.0",
+  "description": "ofd designer",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,6 +15,7 @@
   "keywords": [
     "typescript"
   ],
+  
   "homepage": "https://github.com/qdjavascript/ofd",
   "author": "qdjavascript@gmail.com",
   "license": "ISC",
@@ -30,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/qdjavascript/ofd.git"
+    "url": "git+https://github.com/qdjavascript/ofd.git#designer"
   },
   "bugs": {
     "url": "https://github.com/qdjavascript/ofd/issues"
