--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/qdjavascript/ofd.git"
+    "url": "git+https://github.com/qdjavascript/ofd.git#ofd"
   },
   "bugs": {
     "url": "https://github.com/qdjavascript/ofd/issues"
